[package]
name = "wptfyi"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1"
log = "0.4.29"
serde = {version = "1", features = ["derive"]}
serde_json = "1"
thiserror = "2"
time = {version = "0.3", features=["serde", "parsing", "formatting"]}
url = "2"
